# bed-management-squad-demo

./: .env.sample  Dockerfile  README.md  azure.yaml  eval-results-gpt-4.1-disruption.json  eval-results-gpt-4.1.json  eval-results-gpt-5-mini.json  eval-results-gpt-5.2.json  package-lock.json
.github/workflows/: deploy.yml  scheduled-rebuild.yml  squad-ci.yml  squad-docs.yml  squad-heartbeat.yml  squad-insider-release.yml  squad-main-guard.yml  squad-preview.yml
.squad/: decisions.md  routing.md  team.md
.squad/log/: 2026-03-07-phase1-phase2.md  2026-03-27-er-admission-rename.md
.squad/orchestration-log/: 2026-03-27T1200Z-goose.md  2026-03-27T1200Z-jester.md  2026-03-27T1200Z-maverick.md  2026-03-27T1200Z-viper.md
docs/: architecture.md  azure-deployment.md  local-development.md
infra/: main.bicep  main.bicepparam  main.json
infra/modules/: aca.bicep  foundry.bicep  (+1 more)
scripts/: build_agents.py  model_eval.py  smoke_test.sh
src/api/: pyproject.toml
src/api/app/: config.py  main.py
src/api/app/agents/: orchestrator.py
src/api/app/agents/prompts/: bed-allocation.txt  evs-tasking.txt  flow-coordinator.txt  policy-safety.txt  predictive-capacity.txt  transport-ops.txt
src/api/app/models/: entities.py  enums.py
src/api/app/routers/: events.py  messages.py  scenarios.py  state.py
src/api/app/state/: store.py
src/api/app/tools/: __init__.py  tool_functions.py  tool_schemas.py
src/api/tests/: conftest.py  test_config_endpoint.py  test_endpoints.py  test_metrics.py  test_models.py  test_scenarios.py  test_state_store.py  test_tool_functions.py
(+36 files in other folders)
